--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: "Lato", sans-serif;
-
 }
 
 
@@ -23,7 +22,11 @@
 #landing {
     font-size: 1.5rem;
     font-weight: 500;
-  
+    background: lightgray;
+}
+
+#tools {
+    background: lightgray;
 }
 
 #landing h1 {
@@ -35,10 +38,16 @@
     font-size: 1.5rem;
 }
 
+h2  {
+    font-weight: 600;
+}
+
 
 .logo {
     height: 6.25rem;
 }
+
+
 
 
 
